# tsc

./: LICENSE  README.md  example.ipynb  pyproject.toml  requirements.txt
tsc/: __init__.py  dtypes.py  text_stream_clustering.py  util.py
