[tool.poetry]
name = "tsc"
version = "0.1.0"
description = "Text Stream Clustering"
authors = ["Igor Shatalin <shatalin.ip@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sentence-transformers = "^2.1.0"
pydantic = "^1.8.2"
natasha = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pandas = "^1.3.3"
jupyterlab = "^3.1.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
